--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -9,8 +9,7 @@
   align-items: center;
   justify-items: center;
   background-image: var(--background-image);
-  box-shadow: rgba(25, 31, 37, 0.257) 3px 3px 6px 0px inset,
-    rgba(0, 0, 0, 0.233) -3px -3px 6px 1px inset;
+  box-shadow: var(--header-box-shadow);
   .header__logo__title-container {
     width: 100%;
     height: 100%;
@@ -19,12 +18,13 @@
       width: 35%;
       .header__logo-style {
         width: 60px;
-        filter: brightness(0) invert(1) drop-shadow(0px 10px 5px #0000008b);
+        filter: brightness(0) invert(1) drop-shadow(var(--logo-drop-shadow));
         transition: all 220ms ease-in-out;
 
         &:hover {
           cursor: pointer;
-          filter: brightness(0) invert(1) drop-shadow(0px -5px 5px #fff9d8);
+          filter: brightness(0) invert(1)
+            drop-shadow(var(--logo-HOVER-drop-shadow));
           transition: all 220ms ease-in-out;
         }
       }
@@ -36,11 +36,10 @@
       h1 {
         margin: 0;
         cursor: pointer;
-        color: white;
-        font-family: "Source Serif Pro", serif;
+        color: var(--text-on-gradient-color);
+        font-family: var(--text-font);
         letter-spacing: 1.5px;
-        text-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px,
-          rgba(255, 255, 255, 0.5) 0 1px, rgba(0, 0, 0, 0.3) -1px -2px;
+        text-shadow: var(--text-inset-shadow);
       }
     }
   }
@@ -65,8 +64,8 @@
     .header__info-container {
       width: 65%;
       font-size: 1rem;
-      font-family: "Source Serif Pro", serif;
-      color: white;
+      font-family: var(--text-font);
+      color: var(--text-on-gradient-color);
       height: 100%;
       p {
         margin: 0;
