--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/admin-overview.component.scss
@@ -6,9 +6,7 @@
     gap: 1.5rem;
 
     .overview__cards-container {
-      box-shadow: rgb(204, 219, 232) -3px -3px 6px 0px inset,
-        rgba(255, 255, 255, 0.5) -3px -3px 6px 0px inset,
-        rgb(106, 106, 106, 0.2) 3px 3px 6px 0px inset;
+      box-shadow: var(--overview-container-box-shadow);
       height: 85%;
       width: 100%;
       border-radius: 25px;
@@ -17,8 +15,7 @@
         height: 100%;
       }
       .most__shifts__card {
-        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-          rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+        box-shadow: var(--overview--floating-card-shadow);
         border-radius: 25px;
         overflow: hidden;
       }
@@ -27,7 +24,7 @@
       }
       .overview__no__data-msg {
         font-size: 1.5rem;
-        font-family: "Source Serif Pro", serif !important;
+        font-family: var(--text-font) !important;
         text-decoration: overline;
       }
     }
@@ -37,8 +34,7 @@
       border-radius: 25px;
       overflow: hidden;
       background-image: var(--background-image);
-      box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-        rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+      box-shadow: var(--overview--summary-card-shadow);
     }
   }
   .loader__item {
