--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/past-shifts-card/past-shifts-card.component.scss
@@ -6,7 +6,7 @@
     padding-top: 1rem;
     justify-content: flex-start;
     h1 {
-      font-family: "Source Serif Pro", serif !important;
+      font-family: var(--text-font) !important;
     }
   }
   .past__shifts__table-container {
@@ -17,12 +17,12 @@
       gap: 1rem;
       height: 10%;
       span {
-        font-family: "Source Serif Pro", serif;
+        font-family: var(--text-font);
         letter-spacing: 1.5px;
         font-weight: 600;
       }
       input {
-        font-family: "Source Serif Pro", serif;
+        font-family: var(--text-font);
         background-color: transparent;
         border: none;
         outline: none;
@@ -42,8 +42,8 @@
         rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
       .past__shifts__table {
         th {
-          color: white;
-          font-family: "Source Serif Pro", serif;
+          color: var(--text-on-gradient-color);
+          font-family: var(--text-font);
           font-weight: 600;
           background-image: var(--background-image);
           background-attachment: fixed;
