--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/workers-table/workers-table.component.scss
@@ -3,17 +3,16 @@
   justify-content: space-around;
   background-image: var(--background-image);
   border-radius: 5px;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
-    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  box-shadow: var(--white-inset-card-box-shadow);
   .workers__table__filter-container {
     gap: 0.5rem;
     span {
-      font-family: "Source Serif Pro", serif;
+      font-family: var(--text-font);
       letter-spacing: 1.5px;
       font-weight: 600;
     }
     input {
-      font-family: "Source Serif Pro", serif;
+      font-family: var(--text-font);
       background-color: transparent;
       border: none;
       outline: none;
@@ -27,9 +26,7 @@
 .workers__table-wrapper {
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
-    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
-    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  box-shadow: var(--table-box-shadow);
   table {
     background-color: transparent;
     .hoverRowSelectionEffect {
@@ -37,7 +34,7 @@
     }
     .hoverRowSelectionEffect:hover {
       cursor: pointer;
-      background-color: rgba(128, 128, 128, 0.2);
+      background-color: var(--table-HOVER-text-bg);
       transition: all 220ms ease-in-out;
     }
   }
