--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -1,24 +1,8 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $lamppost-app-primary: mat.define-palette(mat.$indigo-palette);
 $lamppost-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
 $lamppost-app-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $lamppost-app-theme: mat.define-light-theme(
   (
     color: (
@@ -28,21 +12,52 @@ $lamppost-app-theme: mat.define-light-theme(
     ),
   )
 );
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($lamppost-app-theme);
 
-/* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 :root {
+  --text-font: var(--text-font);
+
+  --text-on-gradient-color: white;
+
   --background-image: linear-gradient(
     135deg,
     #8bc6ec 0%,
     rgb(149, 153, 226) 100%
   );
+
+  --overlay-dialog-background: rgba(0, 0, 0, 0.75);
+
   --box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+  --table-box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
+  --header-box-shadow: rgba(25, 31, 37, 0.257) 3px 3px 6px 0px inset,
+    rgba(0, 0, 0, 0.233) -3px -3px 6px 1px inset;
+
+  --white-inset-card-box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+
+  --logo-drop-shadow: 0px 10px 5px #0000008b;
+
+  --logo-HOVER-drop-shadow: 0px -5px 5px #fff9d8;
+
+  --table-HOVER-text-bg: rgba(128, 128, 128, 0.2);
+
+  --text-inset-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px,
+    rgba(255, 255, 255, 0.5) 0 1px, rgba(0, 0, 0, 0.3) -1px -2px;
+
+  --overview-container-box-shadow: rgb(204, 219, 232) -3px -3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 0px inset,
+    rgb(106, 106, 106, 0.2) 3px 3px 6px 0px inset;
+
+  --overview--floating-card-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
+  --overview--summary-card-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 html,
@@ -50,7 +65,7 @@ body {
   height: 100%;
 }
 body {
-  font-family: "Source Serif Pro", serif !important;
+  font-family: var(--text-font) !important;
 }
 * {
   margin: 0;
@@ -76,7 +91,7 @@ body {
   gap: 1.5rem;
   mat-form-field {
     width: 80%;
-    font-family: "Source Serif Pro", serif !important;
+    font-family: var(--text-font) !important;
     .visibility__toogle-icon {
       cursor: pointer;
       position: absolute;
@@ -89,12 +104,12 @@ body {
   height: 90vh;
 }
 .cdk-overlay-dark-backdrop {
-  background: rgba(0, 0, 0, 0.75) !important;
+  background: var(--overlay-dialog-background) !important;
 }
 .mat-mdc-dialog-container .mdc-dialog__surface {
   background-image: var(--background-image) !important;
   border-radius: 15px !important;
-  color: white;
+  color: var(--text-on-gradient-color);
   box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 4px 0px inset !important;
 }
 
@@ -110,16 +125,19 @@ input[type="number"] {
 .mat-mdc-snack-bar-container {
   --notification-box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  --mat-mdc-snack-bar-button-color: #ffffff;
-  --mdc-snackbar-supporting-text-color: #ffffff;
+  --red-notification-bg: rgba(226, 52, 52, 0.85);
+  --green-notification-bg: rgb(149, 153, 226);
+
+  --mat-mdc-snack-bar-button-color: var(--text-on-gradient-color);
+  --mdc-snackbar-supporting-text-color: var(--text-on-gradient-color);
 
   &.red-snackbar {
-    --mdc-snackbar-container-color: rgba(226, 52, 52, 0.85);
+    --mdc-snackbar-container-color: var(--red-notification-bg);
     box-shadow: var(--notification-box-shadow);
   }
 
   &.green-snackbar {
-    --mdc-snackbar-container-color: rgb(149, 153, 226);
+    --mdc-snackbar-container-color: var(--green-notification-bg);
     box-shadow: var(--notification-box-shadow);
   }
 }
