small fixes for header and logout functionality

--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.html
@@ -36,7 +36,7 @@
       <button
         mat-mini-fab
         color="primary"
-        [routerLink]="logoutPath"
+        (click)="logoutCurrentUser()"
         matTooltip="Log out"
       >
         <mat-icon>{{ logoutIcon }}</mat-icon>
