mobile and smaller tablets responsivness done for auth pages, reset pass button re-located and small clean-up

--- a/lamppost-app/src/app/components/authentication/login/login.component.html
+++ b/lamppost-app/src/app/components/authentication/login/login.component.html
@@ -7,7 +7,7 @@
     <mat-label>Email</mat-label>
     <input
       matInput
-      placeholder="mail@example.com"
+      placeholder="Insert your email address"
       formControlName="email"
       required
     />
