--- a/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
+++ b/lamppost-app/src/app/components/authentication/auth-page/auth-page.component.scss
@@ -47,3 +47,36 @@
     height: 100%;
   }
 }
+
+@media only screen and (max-width: 825px) {
+  .authentication__body {
+    display: block;
+    width: 100%;
+    .authentication__card-wrapper {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 0px;
+      box-shadow: none;
+      .authentication__forms-container {
+        height: auto;
+        .authentication__forms__header-container {
+          flex-direction: column;
+          padding: 0;
+          height: fit-content;
+        }
+        .authentication__forms__controls-container {
+          padding: 0 1%;
+          position: absolute;
+          a {
+            font-size: 0.75rem;
+            height: 36px;
+          }
+        }
+      }
+    }
+    .authentication__image-container {
+      display: none;
+    }
+  }
+}
