--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/highest-earnings-summary-display/highest-earnings-summary-display.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/highest-earnings-summary-display/highest-earnings-summary-display.component.scss
@@ -1,5 +1,6 @@
 .highest__earnings__display-container {
   height: 100%;
+  text-align: center;
   .highest__earnings__display__message {
     color: var(--text-on-gradient-color);
     font-weight: 500;
