--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -106,6 +106,7 @@
     padding: 0;
     bottom: 0;
     left: 0;
+    z-index: 5;
     display: flex;
     flex-direction: column;
     .header__logo__title-container {
