got user header up-to-date

--- a/lamppost-app/src/app/components/homepages/user/user-home/user-home.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-home/user-home.component.html
@@ -1,4 +1,4 @@
 <section>
-  <app-user-header></app-user-header>
+  <app-user-header [fullname]="fullname"></app-user-header>
   <router-outlet></router-outlet>
 </section>
