--- a/lamppost-app/src/app/components/homepages/user/user-header/user-header.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-header/user-header.component.html
@@ -1,4 +1,20 @@
-<header class="header-container">
+<button class="mobile__menu-button" (click)="openMobileMenu()">
+  <img
+    [src]="logoSrc"
+    alt="No Lamp"
+    [ngClass]="
+      hamburgerMenuStatus
+        ? 'active-button-header__logo'
+        : 'button-header__logo-style'
+    "
+  />
+</button>
+<header
+  class="header-container"
+  [ngClass]="
+    hamburgerMenuStatus ? 'open__header-container' : 'closed__header-container'
+  "
+>
   <section class="header__logo__title-container flexRow">
     <div class="header__logo-container flexColumn">
       <img
@@ -12,7 +28,7 @@
       class="header__app__title-container flexColumn"
       [routerLink]="logoPath"
     >
-      <h1 [innerText]="appTitle"></h1>
+      <h1 [innerText]="appTitle" class="header__app__title"></h1>
     </div>
   </section>
   <nav class="header__navigation-container flexRow">
@@ -20,8 +36,11 @@
       mat-fab
       extended
       [routerLink]="nav.path"
-      *ngFor="let nav of navLinks"
+      *ngFor="let nav of navLinks; let i = index"
+      [matTooltip]="nav.name"
+      [matTooltipDisabled]="isTooltipDisabled"
       color="primary"
+      class="header__navigation__button"
     >
       <mat-icon>{{ nav.icon }}</mat-icon>
       {{ nav.name }}
@@ -35,7 +54,7 @@
       <button
         mat-mini-fab
         color="primary"
-        [routerLink]="logoutPath"
+        (click)="logoutCurrentUser()"
         matTooltip="Log out"
       >
         <mat-icon>{{ logoutIcon }}</mat-icon>
