--- a/lamppost-app/src/app/components/homepages/user/user-header/user-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/user/user-header/user-header.component.scss
@@ -9,8 +9,7 @@
   align-items: center;
   justify-items: center;
   background-image: var(--background-image);
-  box-shadow: rgba(25, 31, 37, 0.257) 3px 3px 6px 0px inset,
-    rgba(0, 0, 0, 0.233) -3px -3px 6px 1px inset;
+  box-shadow: var(--header-box-shadow);
   .header__logo__title-container {
     width: 100%;
     height: 100%;
@@ -19,13 +18,13 @@
       width: 35%;
       .header__logo-style {
         width: 60px;
-        aspect-ratio: 1;
-        filter: brightness(0) invert(1) drop-shadow(0px 10px 5px #0000008b);
+        filter: brightness(0) invert(1) drop-shadow(var(--logo-drop-shadow));
         transition: all 220ms ease-in-out;
 
         &:hover {
-          scale: 1.1;
           cursor: pointer;
+          filter: brightness(0) invert(1)
+            drop-shadow(var(--logo-HOVER-drop-shadow));
           transition: all 220ms ease-in-out;
         }
       }
@@ -34,22 +33,28 @@
       width: 65%;
       height: 100%;
       align-items: flex-start;
-      h1 {
+      .header__app__title {
         margin: 0;
         cursor: pointer;
-        color: white;
-        font-family: "Source Serif Pro", serif;
+        color: var(--text-on-gradient-color);
+        font-family: var(--text-font);
         letter-spacing: 1.5px;
-        text-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px,
-          rgba(255, 255, 255, 0.5) 0 1px, rgba(0, 0, 0, 0.3) -1px -2px;
+        text-shadow: var(--text-inset-shadow);
       }
     }
   }
   .header__navigation-container {
     width: 100%;
     justify-content: space-around;
-    a {
+    .header__navigation__button {
       font-size: 1rem;
+      &:nth-of-type(2) {
+        font-size: 0rem;
+        * {
+          margin: 0 !important;
+          border-radius: 100px !important;
+        }
+      }
     }
   }
   .header__info__logout-container {
@@ -60,10 +65,8 @@
     .header__info-container {
       width: 65%;
       font-size: 1rem;
-      font-family: "Source Serif Pro", serif;
-      color: white;
-      text-shadow: rgba(0, 0, 0, 0.5) -1px 0, rgba(0, 0, 0, 0.3) 0 -1px,
-        rgba(255, 255, 255, 0.5) 0 1px, rgba(0, 0, 0, 0.3) -1px -2px;
+      font-family: var(--text-font);
+      color: var(--text-on-gradient-color);
       height: 100%;
       p {
         margin: 0;
@@ -73,5 +76,105 @@
       width: 35%;
       height: 100%;
     }
+  }
+}
+.mobile__menu-button {
+  display: none;
+}
+
+@media only screen and (max-width: 960px) {
+  .mobile__menu-button {
+    display: block;
+    position: absolute;
+    top: 2.5%;
+    left: 2.5%;
+    border: none;
+    background: transparent;
+    z-index: 10;
+
+    .button-header__logo-style {
+      cursor: pointer;
+      width: 60px;
+      filter: brightness(1) drop-shadow(var(--logo-drop-shadow));
+      transition: all 220ms ease-in-out;
+    }
+  }
+
+  .header-container {
+    height: 100%;
+    width: 12.5%;
+    padding: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    .header__logo__title-container {
+      height: 35%;
+      flex-direction: column;
+      .header__logo-container {
+        width: 100%;
+        height: 35%;
+        .header__logo-style {
+          display: none;
+        }
+      }
+      .header__app__title-container {
+        width: 100%;
+        height: 65%;
+        writing-mode: vertical-rl;
+        text-orientation: upright;
+        .header__app__title {
+          font-size: 1rem;
+          letter-spacing: 0px;
+        }
+      }
+    }
+    .header__navigation-container {
+      height: 45%;
+      flex-direction: column;
+      .header__navigation__button {
+        font-size: 0rem;
+        * {
+          margin: 0 !important;
+          border-radius: 100px !important;
+        }
+      }
+    }
+    .header__info__logout-container {
+      flex-direction: column;
+      height: 20%;
+      .header__info-container {
+        width: 100%;
+        height: 50%;
+        font-size: 0.75rem;
+        text-align: center;
+      }
+      .header__logout-container {
+        width: 100%;
+        height: 50%;
+      }
+    }
+  }
+}
+
+.open__header-container {
+  transform: translateX(0%);
+  transition: all 250ms ease-in-out;
+}
+.closed__header-container {
+  transform: translateX(-100%);
+  transition: all 250ms ease-in-out;
+}
+.active-button-header__logo {
+  width: 60px;
+  cursor: pointer;
+  filter: brightness(0) invert(1) drop-shadow(var(--logo-HOVER-drop-shadow));
+  transition: all 220ms ease-in-out;
+}
+
+@media only screen and (max-width: 560px) {
+  .header-container {
+    width: 20%;
   }
 }
