add a shift and shift-table done

--- a/lamppost-app/src/app/components/homepages/user/user-shifts/user-table-shifts/user-table-shifts.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-shifts/user-table-shifts/user-table-shifts.component.html
@@ -105,6 +105,7 @@
       mat-row
       *matRowDef="let row; columns: displayedColumns"
       class="hoverRowSelectionEffect"
+      (click)="selectShift(row)"
     ></tr>
 
     <!-- Row shown when there is no matching data. -->
