--- a/lamppost-app/src/app/components/homepages/user/user-shifts/user-add-shifts/user-add-shifts.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-shifts/user-add-shifts/user-add-shifts.component.html
@@ -5,7 +5,11 @@
     (ngSubmit)="addShift()"
     class="addShiftFormContainer flexColumn"
   >
-    <mat-form-field appearance="fill">
+    <mat-form-field
+      class="form__field-wrapper"
+      appearance="fill"
+      appearance="outline"
+    >
       <mat-label>Department</mat-label>
       <mat-select formControlName="shiftDepartment">
         <mat-option value="HR">HR</mat-option>
@@ -49,7 +53,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="form__field-wrapper">
+    <mat-form-field class="form__field-wrapper" appearance="outline">
       <mat-label>Date</mat-label>
       <input
         type="date"
@@ -63,7 +67,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="form__field-wrapper">
+    <mat-form-field class="form__field-wrapper" appearance="outline">
       <mat-label>Start Time</mat-label>
       <input
         type="time"
@@ -83,7 +87,7 @@
       >
     </mat-form-field>
 
-    <mat-form-field class="form__field-wrapper">
+    <mat-form-field class="form__field-wrapper" appearance="outline">
       <mat-label>End Time</mat-label>
       <input
         type="time"
@@ -97,7 +101,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="form__field-wrapper">
+    <mat-form-field class="form__field-wrapper" appearance="outline">
       <mat-label>Wage/Hour</mat-label>
       <input
         type="text"
@@ -111,7 +115,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <mat-form-field class="form__field-wrapper" appearance="outline">
       <mat-label>Textarea</mat-label>
       <textarea matInput formControlName="shiftComments"></textarea>
     </mat-form-field>
