responsivness for admin pages and user profile editing integrated

--- a/lamppost-app/src/app/components/homepages/administrator/admin-overview/highest-earnings-summary-display/highest-earnings-summary-display.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-overview/highest-earnings-summary-display/highest-earnings-summary-display.component.scss
@@ -8,3 +8,10 @@
     margin: 0;
   }
 }
+@media only screen and (max-width: 770px) {
+  .highest__earnings__display-container {
+    .highest__earnings__display__message {
+      font-size: 1.25rem;
+    }
+  }
+}
