--- a/lamppost-app/src/styles.scss
+++ b/lamppost-app/src/styles.scss
@@ -16,7 +16,7 @@ $lamppost-app-theme: mat.define-light-theme(
 
 @import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 :root {
-  --text-font: var(--text-font);
+  --text-font: "Source Serif Pro", serif;
 
   --text-on-gradient-color: white;
 
@@ -150,16 +150,6 @@ input[type="number"] {
 
 @media only screen and (max-width: 960px) {
   .main__body {
-    float: right;
-    width: 87.5%;
-    height: 100vh;
-  }
-}
-
-@media only screen and (max-width: 560px) {
-  .main__body {
-    float: right;
-    width: 80%;
     height: 100vh;
   }
 }
