--- a/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-header/admin-header.component.scss
@@ -89,8 +89,10 @@
     top: 2.5%;
     left: 2.5%;
     border: none;
+    border-radius: 100px;
     background: transparent;
-    z-index: 10;
+    backdrop-filter: blur(5px);
+    z-index: 155;
 
     .button-header__logo-style {
       cursor: pointer;
@@ -106,7 +108,7 @@
     padding: 0;
     bottom: 0;
     left: 0;
-    z-index: 5;
+    z-index: 150;
     display: flex;
     flex-direction: column;
     .header__logo__title-container {
@@ -158,6 +160,19 @@
   }
 }
 
+@media only screen and (max-width: 560px) {
+  .header-container {
+    width: 20%;
+  }
+  .header__navigation-container {
+    .header__navigation__button {
+      padding-left: 10px;
+      padding-right: 10px;
+      border-radius: 100px;
+    }
+  }
+}
+
 .open__header-container {
   transform: translateX(0%);
   transition: all 250ms ease-in-out;
@@ -171,10 +186,4 @@
   cursor: pointer;
   filter: brightness(0) invert(1) drop-shadow(var(--logo-HOVER-drop-shadow));
   transition: all 220ms ease-in-out;
-}
-
-@media only screen and (max-width: 560px) {
-  .header-container {
-    width: 20%;
-  }
 }
