--- a/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.scss
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-workers/admin-workers.component.scss
@@ -10,3 +10,18 @@
     width: 45%;
   }
 }
+@media only screen and (max-width: 1050px) {
+  .workers__body-wrapper {
+    flex-direction: column;
+    .workers__table-container {
+      padding: 0;
+      height: 45%;
+      width: 100%;
+      overflow-y: scroll;
+    }
+    .workers__edit-container {
+      width: 100%;
+      height: 55%;
+    }
+  }
+}
