--- a/lamppost-app/src/app/components/homepages/user/user-shifts/user-add-shifts/user-add-shifts.component.scss
+++ b/lamppost-app/src/app/components/homepages/user/user-shifts/user-add-shifts/user-add-shifts.component.scss
@@ -1,6 +1,7 @@
 .form-wrapper {
   .addShiftFormContainer {
-    padding: 4rem 0rem;
+    padding: 2rem 0rem;
+    gap: 0.25rem;
     background-image: var(--background-image);
     width: 60%;
     box-shadow: rgb(204, 219, 232) -3px -3px 6px 0px inset,
@@ -10,4 +11,12 @@
   }
   height: 90%;
   width: 100%;
+  h1 {
+    font-family: var(--text-font);
+    color: var(--text-on-gradient-color);
+    padding-bottom: 1%;
+  }
+  .form__field-wrapper {
+    width: 70%;
+  }
 }
