guards implemented for the user and new regex added for the wage/hour field

--- a/lamppost-app/src/app/components/homepages/administrator/admin-shifts/edit-shift-overlay/edit-shift-overlay.component.html
+++ b/lamppost-app/src/app/components/homepages/administrator/admin-shifts/edit-shift-overlay/edit-shift-overlay.component.html
@@ -88,6 +88,14 @@
       <mat-error *ngIf="editShiftForm.get('shiftWage')?.hasError('min')">
         Wage cannot be less then 1</mat-error
       >
+      <mat-error
+        *ngIf="
+          !editShiftForm.get('shiftWage')!.hasError('required') &&
+          editShiftForm.get('shiftWage')!.hasError('pattern')
+        "
+      >
+        Wage/hour requires only digits
+      </mat-error>
     </mat-form-field>
   </form>
 </div>
