--- a/lamppost-app/src/app/components/homepages/user/user-profile/user-profile.component.scss
+++ b/lamppost-app/src/app/components/homepages/user/user-profile/user-profile.component.scss
@@ -1,3 +1,12 @@
 .card__form__body {
-  height: 100%;
+  height: 60%;
+  padding: 0rem 2rem;
+  gap: 1rem;
+  border-radius: 25px;
+  box-shadow: var(--box-shadow);
+  background-image: var(--background-image);
+  .card__form__heading {
+    font-family: var(--text-font);
+    color: var(--text-on-gradient-color);
+  }
 }
