--- a/lamppost-app/src/app/components/homepages/user/user-profile/user-profile.component.scss
+++ b/lamppost-app/src/app/components/homepages/user/user-profile/user-profile.component.scss
@@ -1,6 +1,6 @@
 .card__form__body {
-  height: 60%;
-  padding: 0rem 2rem;
+  height: fit-content;
+  padding: 1rem 2rem;
   gap: 1rem;
   border-radius: 25px;
   box-shadow: var(--box-shadow);
