--- a/lamppost-app/src/app/components/homepages/user/user-overview/user-upcoming-week/user-upcoming-week.component.html
+++ b/lamppost-app/src/app/components/homepages/user/user-overview/user-upcoming-week/user-upcoming-week.component.html
@@ -6,7 +6,7 @@
     <div class="shifts__table-wrapper mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" class="past__shifts__table">
         <ng-container matColumnDef="shiftSlug">
-          <th mat-header-cell *matHeaderCellDef>Worker Name</th>
+          <th mat-header-cell *matHeaderCellDef>Shift Slug</th>
           <td mat-cell *matCellDef="let row">{{ row.shiftSlug }}</td>
         </ng-container>
 
